--- a/build.gradle
+++ b/build.gradle
@@ -307,6 +307,12 @@ project(':cruise-control') {
     api 'org.json:json:20231013'
     api 'org.xerial.snappy:snappy-java:1.1.10.5'
 
+    constraints {
+      implementation('org.apache.commons:commons-lang3:3.18.0') {
+        because("3.18.0 addresses vulnerability CVE-2025-48924")
+      }
+    }
+
     testImplementation project(path: ':cruise-control-metrics-reporter', configuration: 'testOutput')
     testImplementation project(path: ':cruise-control-core', configuration: 'testOutput')
     testImplementation "org.scala-lang:scala-library:$scalaVersion"
